--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <br><br>
         <h3 id="status" class="btn btn-default"></h3>
         <br><br>
-        <h3 id="status_two" class="btn btn-danger">Reset</h3>
+        <h3 id="status_two" onclick="restart()" class="btn btn-danger">Reset</h3>
         <div id="canvas"></div>
         <div id="game_console"></div>    
         <div id="myModel" class="model fade">
@@ -51,5 +51,12 @@
             </div>
         </div>
     </center>
-    </body> 
+
+    <div class="copy_right_footer">
+        Developed by - Whitehat.Jr
+    </div>
+    <script src="main.js"></script>
+
+    </body>
+     
     </html>
