--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
-    <title>Project 141
+    <title>Project 142
     </title> 
     
     <!-- link p5.js and its addons like p5.dom.js or p5.sound.js --> 
@@ -47,6 +47,15 @@
                 <h4>Instruction</h4>
                 </div>
                 <div class="model-body">
+                    1. First keep your laptop screen straight
+                    <br>
+                    2. Move yourself approximately 3-4 feet away from the laptop
+                    <br>
+                    3. Move your right wrist in an ascending and decending manner, a red dot should appear on your right wrist
+                    <br>
+                    4. Now press the play button, and again move yourself 3-4 feet away from laptop
+                    <br>
+                    5. The red paddel is your paddel, that will move as per the movement of your right wrist               
                 </div>
             </div>
         </div>
