--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> 
-    <title>Project 142
+    <title>Project 143
     </title> 
     
     <!-- link p5.js and its addons like p5.dom.js or p5.sound.js --> 
@@ -37,7 +37,7 @@
         <br><br>
         <h3 id="status" class="btn btn-default"></h3>
         <br><br>
-        <h3 id="status_two" onclick="restart()" class="btn btn-danger">Reset</h3>
+        <h3 id="restart" onclick="restart()" class="btn btn-danger">Reset</h3>
         <div id="canvas"></div>
         <div id="game_console"></div>    
         <div id="myModel" class="model fade">
@@ -62,7 +62,7 @@
     </center>
 
     <div class="copy_right_footer">
-        Developed by - Whitehat.Jr
+        Developed by - Adnah Sachin
     </div>
     <script src="main.js"></script>
 
